<resources>
    <string name="app_name">PantryPals</string>

    <!-- Auth -->
    <!-- Login page-->
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_email">Invalid Email Entered</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="modal_reset_title">Reset Password</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="reset_email_confirm">Reset email sent to: </string>
    <string name="reset_email">Email of Account</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="emptystring"></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="app_display_name">pantry pals</string>

    <!-- Email Registration page-->

    <string name="error_invalid_password_confirm">Passwords do not match</string>
    <string name="email_reg_title">Email Registration</string>
    <string name="email_reg_description">Please fill out this form to register for a PantryPals account.</string>
    <string name="email_reg_email">Email</string>
    <string name="email_reg_password_requirements">Password must be at least 6 characters.</string>
    <string name="email_reg_password">Password</string>
    <string name="email_reg_password_confirm">Confirm Password</string>
    <string name="email_reg_ButtonReg">Register</string>
    <string name="email_reg_confirmed">Email vertification has been sent</string>


    <!-- Account Creation -->
    <string name="account_creation_title">Account Creation</string>
    <string name="account_creation_description">Please fill out this form to set up your account information</string>
    <string name="reg_name_first">First Name</string>
    <string name="reg_name_last">Last Name</string>
    <string name="login_identity_title">Identity</string>
    <string name="reg_bio">About yourself...</string>
    <string name="reg_preferences">Preferences...</string>
    <string name="reg_restrictions">Restrictions...</string>
    <string name="account_creation_button">Create</string>


    <!-- Navigation bar-->
    <string name="nav_home">Home</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_pantry">My Pantry</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_notifications">Notifications</string>

    <!-- Fragments -->
    <string name="fragment_title_home">HOME FRAGMENT</string>
    <string name="fragment_title_discover">DISCOVER FRAGMENT</string>
    <string name="fragment_title_pantry">MY PANTRY FRAGMENT</string>
    <string name="fragment_title_profile">MY PROFILE FRAGMENT</string>
    <string name="fragment_title_notifications">NOTIFICATIONS FRAGMENT</string>

    <!-- Discover Page -->
    <string name="discover_search_hint">Search people, posts, and communities...</string>
    <!-- Pantry -->
    <string name="modal_add_item">Add Item</string>
    <string-array name="units">
        <item>oz</item>
        <item>lb</item>
        <item>mL</item>
        <item>L</item>
        <item>cup</item>
    </string-array>
    <string name="pantries">Pantries</string>
    <string name="my_pantry">My Pantry</string>
    <string name="joint_pantries">Joint Pantries</string>
    <string name="add_item_title">Add Item to Pantry</string>
    <string name="confirm_add_before">Are you sure you want to add </string>
    <string name="confirm_add_after"> to your joint pantry?</string>
    <string name="invalid_add_text">Sorry, that item is already in this joint pantry.</string>
    <string name="add_item_from_my_pantry_title">Add Item from My Pantry</string>
    <string name="add_item">Add</string>
    <string name="add_new_joint_pantry">Add New Joint Pantry</string>

    <!-- My Pantry -->
    <string name="modal_edit_item">Edit Item</string>
    <string name="edit_item_pantry">Edit Item</string>
    <string name="item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="units">Units</string>

    <!-- Grocery List-->
    <string name="my_grocery_list">My Grocery List</string>
    <string name="add_item_grocery_title">Add item to Grocery List</string>


    <!-- Joint Pantry -->
    <string name="joint_pantry">Joint Pantry</string>
    <string name="add_item_from_pantry">Add Item from My Pantry</string>
    <string name="new_joint_pantry_title">Title:</string>
    <string name="share_with_users">Share with: \n(emails)</string>
    <string name="new_joint_instructions">Name your joint pantry and then put comma-separated emails for who you wish to share the pantry with</string>
    <string name="create">create</string>

    <string name="discover_list_trending">Trending</string>
    <string name="discover_list_moods">Moods</string>
    <string name="discover_list_cuisines">Cuisines</string>
    <string name="discover_list_communities">Communities</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- profile-->
    <string name="send_invite">Send Invite</string>
    <string name="send">Send</string>
    <string name="invite_to_jpantry_title">Select a Joint Pantry</string>
    <string name="confirmInvBefore">Are you sure you want to invite </string>
    <string name="confirmInvMiddle"> to join the </string>
    <string name="confirmInvAfter"> joint pantry?</string>
    <string name="invalidInviteText">Sorry, this user is already an owner of this joint pantry.</string>
</resources>
