<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="pantrypals.activities.EmailRegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TVdescription"
                android:text="@string/email_reg_title"
                android:textSize="@dimen/h1Size"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:paddingBottom="@dimen/padding"/>

            <TextView
                android:id="@+id/TVdescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_reg_description"
                android:textSize="@dimen/h4Size"
                android:textColor="@color/colorHint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="36sp" />


            <EditText
                android:id="@+id/TFemail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_reg_email"
                android:text="@string/emptystring"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <TextView
                android:id="@+id/passwordRequire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/email_reg_password_requirements"
                android:textAlignment="center"
                android:textColor="@color/colorHint"
                android:textSize="@dimen/h3Size" />

            <EditText
                android:id="@+id/TFpassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_reg_password"
                android:inputType="textPassword"
                android:text="@string/emptystring"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <EditText
                android:id="@+id/TFpasswordConfirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_reg_password_confirm"
                android:inputType="textPassword"
                android:text="@string/emptystring"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="36sp" />


            <Button
                android:id="@+id/Bregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email_reg_ButtonReg"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccentAlt"
                android:textSize="@dimen/h4Size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
