<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_layout_master"
    android:orientation="vertical"
    tools:context="pantrypals.discover.DiscoverFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/featured_posts"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/discover_list_trending_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_list_trending"
        android:gravity="left"
        android:padding="@dimen/padding"
        />

    <TextView
        android:id="@+id/discover_list_moods_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_list_moods"
        android:gravity="left"
        android:padding="@dimen/padding"
        />

    <TextView
        android:id="@+id/discover_list_cuisines_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_list_cuisines"
        android:gravity="left"
        android:padding="@dimen/padding"
        />

    <TextView
        android:id="@+id/discover_list_communities_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_list_communities"
        android:gravity="left"
        android:padding="@dimen/padding"
        />

</LinearLayout>
