<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/account_creation"
    android:background="@color/colorPrimaryDark"
    tools:context="pantrypals.activities.AccountCreationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TVdescription"
                android:text="@string/account_creation_title"
                android:textSize="@dimen/h1Size"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:paddingBottom="@dimen/padding"/>

            <TextView
                android:id="@+id/TVdescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_creation_description"
                android:textSize="@dimen/h4Size"
                android:textColor="@color/colorHint"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_identity_title"
                android:textSize="@dimen/h3Size"
                android:textAppearance="@style/AppTheme.TextAppearance.Black"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding">
            <Button
                android:id="@+id/uploadAvatarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_recipe_title"
                android:padding="@dimen/padding"
                android:background="@drawable/rounded_corner_blue"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:text="Upload Avatar" />
            </RelativeLayout>

            <EditText
                android:id="@+id/TFnameFirst"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/reg_name_first"
                android:text="@string/emptystring"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />


            <EditText
                android:id="@+id/TFnameLast"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/reg_name_last"
                android:text="@string/emptystring"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal Information"
                android:textAppearance="@style/AppTheme.TextAppearance.Black"
                android:textSize="@dimen/h3Size"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:id="@+id/TFbio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/reg_bio"
                android:text="@string/emptystring"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30sp"
                android:text="Tell us your preferences!"
                android:textAlignment="center"
                android:paddingBottom="15sp"
                android:textColor="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <com.wefika.flowlayout.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/reg_prefs_flow_layout">
            </com.wefika.flowlayout.FlowLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30sp"
                android:text="Tell us about any restrictions you have!"
                android:textAlignment="center"
                android:paddingBottom="15sp"
                android:textColor="@color/colorHint"
                android:textSize="@dimen/h4Size" />

            <com.wefika.flowlayout.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:id="@+id/reg_restrictions_flow_layout">
            </com.wefika.flowlayout.FlowLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="36sp" />

            <Button
                android:id="@+id/BCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/account_creation_button"
                android:clickable="true"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccentAlt"
                android:textSize="@dimen/h4Size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
